# GPGPU

./: .gitignore  README.md  build.sh  package-lock.json  package.json
backend/: api.py  benchmark.py  cpu_image_bench.py  opt_bench.py  pyproject.toml  stream_engine.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
gpgpu-cuda/: CMakeLists.txt  README.md
gpgpu-cuda/src/: Compute.cpp  Compute.cu  Compute.hpp  Image.hpp  StreamEngine.cpp  StreamEngine.h  StreamEngine.hpp  StreamRunner.cpp  StreamRunner.hpp  stream.cpp
outputs/: grid_results.json
python-backend/: stream_engine.py  test.py
results/: cpu_image_bench.json
